@@ -53,7 +53,7 @@ public class Level implements EntityMover {
 		}
 		Tile placementTile = this.getTile(c);
 		this.player = new PlayerMobileEntity(new Coord(1, 1));
-		placementTile.addPlayer(player);
+		placementTile.addMobileEntity(player);
 	}
 	
 	/**
@@ -79,7 +79,7 @@ public class Level implements EntityMover {
 		Tile placementTile = getTile(c);
 		enemy.setEntityMover(this);
 		enemy.setWinCondition(this.winSystem.newWinCondition(WinType.ENEMY));
-		placementTile.addEnemy(enemy);
+		placementTile.addMobileEntity(enemy);
 	}
 	
 	public void tick() {
@@ -232,13 +232,13 @@ public class Level implements EntityMover {
 	 * @see gameModel.EntityMover#moveEntity(gameModel.MobileEntity, gameModel.Direction)
 	 */
 	@Override
-	public boolean moveEnemy(MobileEntity e, Direction dir) {
+	public boolean moveMobileEntity(MobileEntity e, Direction dir) {
 		Tile newTile = this.getTile(e.getCoord(), dir);
 		if (newTile == null) {
 			System.out.println("Level.moveEntity: warning moving Entity " + e.toString() + "To an invalid coord");
 			return false;
 		}
-		return this.moveEnemy(e, newTile.getCoord());
+		return this.moveMobileEntity(e, newTile.getCoord());
 	}
 
 	/**
@@ -249,53 +249,12 @@ public class Level implements EntityMover {
 	 * @precondition nextCoord is in the map 
 	 */
 	@Override
-	public boolean moveEnemy(MobileEntity e, Coord nextCoord) {
+	public boolean moveMobileEntity(MobileEntity e, Coord nextCoord) {
 		Tile placementTile = this.getTile(nextCoord);
 		Tile originalTile = this.getTile(e.getCoord());
 		try {
-			placementTile.addEnemy(e);
-			originalTile.removeEnemy(e);
-			
-		} catch (EntityPlacementException exp){
-			//The entity cannot be placed here for some reason
-			if (DEBUG) {
-				System.out.println("Level.moveEnemy: Placing enemy received exception: " + exp.toString());
-			}
-			return false;
-		}
-		return true;
-	}
-
-	/* (non-Javadoc)
-	 * @see gameModel.EntityMover#moveEntity(gameModel.MobileEntity, gameModel.Direction)
-	 */
-	@Override
-	public boolean movePlayer(PlayerMobileEntity e, Direction dir) {
-		Tile newTile = this.getTile(e.getCoord(), dir);
-		if (newTile == null) {
-			System.out.println("Level.moveEntity: warning moving Entity " + e.toString() + "To an invalid coord");
-			return false;
-		}
-		return this.movePlayer(e, newTile.getCoord());
-	}
-
-	/**
-	 * @param e the enemy to be moved
-	 * @param nextCoord the coord to move the enemy to
-	 * @return true if the entity is moved to the new tile. false else
-	 * @precondition e != null
-	 * @precondition nextCoord is in the map 
-	 */
-	@Override
-	public boolean movePlayer(PlayerMobileEntity e, Coord nextCoord) {
-		if (DEBUG) {
-			System.out.println("Moving player from " + e.getCoord() + " To " + nextCoord);
-		}
-		Tile placementTile = this.getTile(nextCoord);
-		Tile originalTile = this.getTile(e.getCoord());
-		try {
-			placementTile.addPlayer(e);
-			originalTile.removePlayer(e);
+			placementTile.addMobileEntity(e);
+			originalTile.removeMobileEntity(e);
 			
 		} catch (EntityPlacementException exp){
 			//The entity cannot be placed here for some reason
