@@ -1,12 +1,12 @@
 package gameModel;
 
 public class Tile {
-	private final boolean DEBUG = false;
+	private final boolean DEBUG = true;
 	
 	private Coord coord;
 	private UsableEntity item = null;
 	private MobileEntity enemy = null;
-	private PlayerMobileEntity player = null;
+	private MobileEntity player = null;
 	private EntityMover entityMover;	
 	
 	public Tile(Coord coord, EntityMover entityMover) {
@@ -22,12 +22,12 @@ public class Tile {
 		if (enemy != null && enemy.lastMoveTickNum() != tickNum) {
 			Coord nextCoord = enemy.nextCoord();
 			enemy.setLastMoveTickNum(tickNum);
-			entityMover.moveEnemy(enemy, nextCoord);
+			entityMover.moveMobileEntity(enemy, nextCoord);
 		}
 		if (player != null && player.lastMoveTickNum() != tickNum) {
 			Coord nextCoord = player.nextCoord();
 			player.setLastMoveTickNum(tickNum);
-			entityMover.movePlayer(player, nextCoord);
+			entityMover.moveMobileEntity(player, nextCoord);
 		}
 	}
 	/**
@@ -42,50 +42,42 @@ public class Tile {
 		this.item = item; 
 	}
 	
+	public MobileEntity getPlayer() {
+		return this.player;
+	}
+	
 	/**
 	 * Add an enemy to a tile
 	 * @param enemy
 	 * @throws EntityPlacementException Thrown if there is an error in placing the enemy e.g. walking onto a closed door.
 	 */
-	public void addEnemy(MobileEntity enemy) throws EntityPlacementException {
-		if(this.enemy != null) {
-			throw new EntityPlacementException("Enemy on tile");
+	public void addMobileEntity(MobileEntity entity) throws EntityPlacementException {
+		MobileEntity oldEntity = entity.isPlayer() ? this.player : this.getEnemy();
+		if(oldEntity != null) {
+			throw new EntityPlacementException("Tile is occupied");
 		}
-		if (player != null) player.kill();
-		this.enemy = enemy; 
-		enemy.setCoord(this.getCoord());
-	}
-	
-	/**
-	 * @param player The player to be added to the tile
-	 * @throws EntityPlacementException if there is an error placing the player e.g. walking onto a wall or locked door
-	 */
-	public void addPlayer(PlayerMobileEntity player) throws EntityPlacementException {
-		if (this.player != null) {
-			throw new EntityPlacementException("Player on tile");
+		entity.setCoord(this.getCoord());
+		if (entity.isPlayer()) {
+			if (DEBUG) System.out.println("Adding player to tile " + this.getCoord());
+			this.player = entity;
+		} else {
+			this.enemy = entity;
+			if (player != null) 
+				if (player.kill()) {
+					this.player = null;
+			}
 		}
-		this.player = player; 
-		player.setCoord(this.getCoord());
 		if (this.item != null) {
-			this.player.pickup(this.item);
-			this.removeItem();
-		}
-		if (this.enemy != null) {
-			if (this.player.kill()) {
-				this.player = null;
+			if (entity.pickup(this.item)) {
+				this.removeItem();
 			}
 		}
 	}
-
+	
 	public void removeItem() {
 		this.item = null;
 	}
 
-	public PlayerMobileEntity getPlayer() {
-		return this.player;
-		
-	}
-	
 	public MobileEntity getEnemy() {
 		return this.enemy;
 		
@@ -139,23 +131,18 @@ public class Tile {
 	/**
 	 * @param e The entity to be removed from this tile
 	 */
-	public void removeEnemy(MobileEntity e) {
-		if (e != this.enemy) {
+	public void removeMobileEntity(MobileEntity e) {
+		MobileEntity oldEntity = e.isPlayer() ? this.player : this.getEnemy();
+		if (e != oldEntity) {
 			if (DEBUG) {
-				System.out.println("Tile.removeEnemy: Warning: trying to remove enemy not on this tile");
+				System.out.println("Tile.removeEnemy: Warning: trying to remove entity not on this tile");
 			}
 		} else {
-			this.enemy = null;
-		}
-	}
-
-	public void removePlayer(PlayerMobileEntity e) {
-		if (e != this.player) {
-			if (DEBUG) {
-				System.out.println("Tile.removePlayer: Warning: trying to remove player not on this tile");
+			if (e.isPlayer()) {
+				this.player = null;
+			} else {
+				this.enemy = null;
 			}
-		} else {
-			this.player = null;
 		}
 	}
 }
